--- a/styles/styleAll.css
+++ b/styles/styleAll.css
@@ -43,7 +43,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(./assets/images/GifPixelArt/bgPixelTim.gif);
+    background: url('/WEB-CV_Digital/assets/images/GifPixelArt/bgPixelTim.gif');
     -webkit-font-smoothing: none;
     -moz-osx-font-smoothing: none;
     overflow: hidden;
@@ -494,7 +494,7 @@ span {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('./assets/images/imgHome/1055726.png');
+    background: url('/WEB-CV_Digital/assets/images/imgHome/1055726.png');
     display: flex;
     flex-direction: column;
     justify-content: space-between;
